# Monocots

./: meson.build  org.example.App.json
data/: org.example.App.appdata.xml.in  org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: content.py  content.ui  content.ui~  main.py  meson.build  monocots.gresource.xml  monocots.in  style.css  window.py  window.ui  window.ui~
